--- a/site_ViveBio/public/css/edit.css
+++ b/site_ViveBio/public/css/edit.css
@@ -1,8 +1,10 @@
 .edit_product main{
-    display:flex;
+    /* display:flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
+    padding-top: 70px;
+    padding-bottom: 70px;
 }
 
 .edit_find{
