--- a/site_ViveBio/public/css/add.css
+++ b/site_ViveBio/public/css/add.css
@@ -3,12 +3,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-top: 70px;
+
 }
 
 .add_container {
     padding: 20px 0 20px;
-    margin: 10px 0 10px;
     width: 90%;
     border-radius: 10px;
     box-shadow: 5px 5px 10px rgb(161, 206, 152);
@@ -16,6 +15,8 @@
     background-color: rgba(255, 255, 255, .15);
     backdrop-filter: blur(5px);
     border: 1px solid var(--verdeFuerte);
+    margin: 50px auto;
+
 }
 
 .add_input:hover,
