--- a/site_ViveBio/public/css/editProfile.css
+++ b/site_ViveBio/public/css/editProfile.css
@@ -93,13 +93,13 @@
 .edit_user__img {
     width: 40%;
     position: relative;
+    height: 100px;
 }
 
 .edit_user__img img {
     width: 100%;
     height: 100%;
-    border-radius: 15px;
-    object-fit: contain;
+    border-radius: 50%;
 }
 
 .edit_user__options {
@@ -218,7 +218,10 @@
     }
 
     .edit_user__img{
+        align-items: center;
         margin: 20px 0;
+        max-width: 150px;
+        max-height: 150px;
     }
 
     .edit_user__info-container{
