--- a/site_ViveBio/src/views/products/card.ejs
+++ b/site_ViveBio/src/views/products/card.ejs
@@ -11,9 +11,7 @@
           <div class="container-card">
 
              <div class="box-imagen">
-              <% product.productImages.forEach(image => { %>
-                  <img src="/images/products/<%= image.name%>" alt="imagen de producto">
-              <% }) %>
+              <img src="/images/products/<%= product.productImages[0].name%>" alt="imagen de producto">
             </div>
             <div class="box-texto-iconos">
               <h1> <%= product.name %>  </h1>
