--- a/site_ViveBio/src/views/partials/header.ejs
+++ b/site_ViveBio/src/views/partials/header.ejs
@@ -4,8 +4,9 @@
             <div class="mobile_logo">
                 <a href="/"><img src="/images/logo.png" alt="logo"></a>
             </div>
-            <div class="nav_mobile_menu">
-                <span id="btnMenu"><i class="fas fa-bars"></i></span>
+            <div class="nav_mobile_menu" id="btnMenu">
+                <span class="navBurger" id="burger"><i class="fas fa-bars"></i></span>
+                <span class="navClose"><i class="fas fa-times"></i></span>
             </div>
         </div>
         <div class="options_mobile" id="menu">
