--- a/site_ViveBio/src/views/index.ejs
+++ b/site_ViveBio/src/views/index.ejs
@@ -15,19 +15,19 @@
                     <input type="radio" name="radio-btn" id="radio4">
                     <!-- imagenes de carrusel -->
                     <div class="slide first">
-                        <p>Lorem ipsum dolor sit amet.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, quia accusamus deserunt numquam veritatis repellendus.</p>
                         <div class="img_1"></div>
                     </div>
                     <div class="slide">
-                        <p>Lorem ipsum dolor sit amet.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, quia accusamus deserunt numquam veritatis repellendus.</p>
                         <div class="img_2"></div>
                     </div>
                     <div class="slide">
-                        <p>Lorem ipsum dolor sit amet.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, quia accusamus deserunt numquam veritatis repellendus.</p>
                         <div class="img_3"></div>
                     </div>
                     <div class="slide">
-                        <p>Lorem ipsum dolor sit amet.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, quia accusamus deserunt numquam veritatis repellendus.</p>
                         <div class="img_4"></div>
                     </div>
                     <!-- fin de imagenes de carrusel -->
