--- a/site_ViveBio/src/views/partials/head.ejs
+++ b/site_ViveBio/src/views/partials/head.ejs
@@ -4,6 +4,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/c5fd8ed388.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/styles.css">
-    <title><%= title %> </title>
+    <title>
+        <%= title %>
+    </title>
     <link rel="shortcut icon" href="/images/Logo.ico" type="image/x-icon">
+    <script src="/javascript/menuMobile.js" defer></script>
+    <script src="/javascript/navEmergent.js" defer></script>
+    <script src="/javascript/script.js" defer></script>
 </head>
