--- a/site_ViveBio/src/views/products/list.ejs
+++ b/site_ViveBio/src/views/products/list.ejs
@@ -43,8 +43,8 @@
                                 <h4 class="list__price">$<%= product.price %>
                                 </h4>
                                 <div class="list__options">
-                                    <form method="POST" action="/products/remove/<%= product.id %>?_method=DELETE">
-                                        <button class="list__delete" type="submit" title="Eliminar producto"><i
+                                    <form method="POST" action="/products/remove/<%= product.id %>?_method=DELETE" id="delete-product-form">
+                                        <button class="list__delete" type="submit" title="Eliminar producto" onclick="return confirmDelete()"><i
                                                 class="fa-solid fa-trash-can"></i></button>
                                     </form>
                                     <a href="/products/edit/<%= product.id %>" class="list__edit"
@@ -57,15 +57,7 @@
 
                 </div>
             </main>
-
-
-
-
-
-
             <%- include('../partials/footer') %>
-                <script src="/javascript/menuMobile.js"></script>
-                <script src="/javascript/navEmergent.js"></script>
     </body>
 
 </html>
