--- a/site_ViveBio/public/css/all.css
+++ b/site_ViveBio/public/css/all.css
@@ -1,11 +1,10 @@
-.productAll main{
+.productAll main {
     margin: auto;
 }
 
 .productAll .primer_contenedor {
-    padding: 30px;
     border: 1px solid var(--verdeFuerte);
-    margin: 20px 30px 20px 30px;
+    margin: 70px 30px;
     border-radius: 20px;
     box-shadow: 2px 2px 5px 5px var(--aquamarine);
 }
@@ -15,16 +14,16 @@
 .productAll .titulares {
     text-align: center;
     color: white;
-    background-color:#7FA794C4;
-    margin: 30px 0;
+    background-color: #7FA794C4;
     height: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 32px;
     border-radius: 20px;
-  
+
 }
+
 /* PRODUCTOS RELACIONADOS */
 .productAll .row {
     width: 100%;
@@ -164,6 +163,7 @@
     border: 1px solid white;
     border-radius: 25px;
 }
+
 @media(min-width: 460px) {
     .productAll .row {
         width: 100%;
