--- a/site_ViveBio/public/css/styles.css
+++ b/site_ViveBio/public/css/styles.css
@@ -11,9 +11,9 @@
 @import './card.css';
 @import './all.css';
 @import './add.css';
-@import './editProducts.css';
+/* @import './editProducts.css'; */
 @import './user.css';
 @import './list.css';
 @import './error.css';
 @import'./editProfile.css';
-@import'./productCart.css';
+/* @import'./productCart.css'; */
