--- a/site_ViveBio/src/views/partials/header.ejs
+++ b/site_ViveBio/src/views/partials/header.ejs
@@ -51,7 +51,8 @@
             <div class="nav_options-emergente">
                 <% if (locals.userLogin && userLogin.rol=="admin" ) { %>
                     <a href="/products/add" title="Añadir producto"><i class="fa-solid fa-plus"></i></a>
-                    <a href="/products/list/0"><i class="fas fa-user-cog"title="Configuraciones de Administrador"></i></a>
+                    <a href="/products/list/0"><i class="fas fa-user-cog"
+                            title="Configuraciones de Administrador"></i></a>
                     <% } %>
                         <a href="#"><i class="fa-solid fa-bell" title="Notificaciones"></i></a>
                         <a href="/products/cart"><i class="fa-solid fa-cart-shopping"
@@ -110,12 +111,12 @@
                             <a href="/products/list/0"><i class="fas fa-user-cog"
                                     title="Configuraciones de Administrador"></i></a>
                             <% } %>
-
+                                <% } %>
                                 <a href="#"><i class="fa-solid fa-bell" title="Notificaciones"></i></a>
                                 <a href="/products/cart"><i class="fa-solid fa-cart-shopping"
                                         title="Carrito de compras"></i></a>
                                 <a href="#"><i class="fa-regular fa-heart" title="Favoritos"></i></a>
-                                <% } %>
+
                 </div>
             </nav>
 </header>
