--- a/site_ViveBio/src/views/products/list.ejs
+++ b/site_ViveBio/src/views/products/list.ejs
@@ -12,11 +12,11 @@
                         <div class="list__cates">
                             <div class="list__cates1">
                                 <a class="list__cate" href="/products/list/0">TODOS</a>
-                                <a class="list__cate" href="/products/list/<%= bioCapilar.products%> ">BioCapilar</a>
+                                <a class="list__cate" href="/products/list/1">BioCapilar</a>
                             </div>
                             <div class="list__cates2">
-                                <a class="list__cate" href="/products/list/<%= bioCorporal.products%>  ">BioCorporal</a>
-                                <a class="list__cate" href="/products/list/<%= bioSpa.products %> ">BioSpa</a>
+                                <a class="list__cate" href="/products/list/2">BioCorporal</a>
+                                <a class="list__cate" href="/products/list/3">BioSpa</a>
                             </div>
 
                         </div>
@@ -32,7 +32,7 @@
                         <h3 class="list__options">Opciones</h3>
                     </div>
                     <section class="list__products">
-                        <% (products).forEach((product)=> { %>
+                        <% products.forEach((product)=> { %>
                             <article class="list__product">
                                 <a class="list__id" href="/products/card/<%= product.id %>">
                                     <%= product.id %>
